--- a/Install.Rmd
+++ b/Install.Rmd
@@ -3,46 +3,38 @@ title: "Install Shiny-phyloseq"
 output: html_document
 ---
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-## Shiny-phyloseq Dependencies
-
 If you are reading this, it is because you are interested
-in launching/running a local instance of Shiny-phyloseq.
+in launching/running an instance of Shiny-phyloseq.
 The Shiny-phyloseq "front end", the GUI web application,
-will run on any modern web browswer.
+will run on any modern web browser.
 Note that older versions of Microsoft's Internet Explorer are **not supported**.
 Firefox, Chrome, Opera, Safari and others should be fine
 for connecting to a Shiny-phyloseq session.
+
 For running the Shiny-phyloseq "back end", you must have
 the latest version of R installed on your system
 as well as several additional R packages.
+
+## Auto-Install Shiny-phyloseq (Recommended)
+
+Simply launching Shiny-phyloseq should also install missing/old packages.
+
+The following R code will launch Shiny-phyloseq on most systems.
+
+```{r eval=FALSE}
+install.packages("shiny")
+shiny::runGitHub("shiny-phyloseq","joey711")
+```
+
+
+## Manual Install of Shiny-phyloseq Dependencies
 
 The following R code will install required packages on your local system.
 Note that this assumes that you have an active internet connection and updated R installation.
 
 ```{r, eval=FALSE}
-# Dependency installation
-source("http://bioconductor.org/biocLite.R")
-installpkgs = c("phyloseq", "shiny", "data.table", "d3Network", "genefilter", "ggplot2", "grid",
-  "gridExtra", "png", "RColorBrewer", "scales")
-biocLite(pkgs = installpkgs)
+source("https://raw.githubusercontent.com/joey711/shiny-phyloseq/master/server.R")
 ```
 
-Note that this will install the latest release version of phyloseq, but some of the functionality of `Shiny-phyloseq` may depend upon utilities in the newer development version. See [the phyloseq installation instructions](http://joey711.github.io/phyloseq/install) and install the latest development release of phyloseq to guarantee full functionality.
+This line executes the same package install/update code that is used by the auto-installer in Shiny-phyloseq itself, but as a one-time batch event that you can run in advance. This is only recommended if you have never launched Shiny-phyloseq before and want to get the pakcage installation out of the way. This also provides the exact recommended dependency and installation code, in case your system has special requirements -- like special development versions of packages, or a non-standard installation of R. For most systems, this is not necessary.
 
-The following lists the recommended version numbers of relevant packages:
-
-```{r}
-packageVersion("phyloseq")
-packageVersion("shiny")
-packageVersion("d3Network")
-packageVersion("data.table")
-packageVersion("genefilter")
-packageVersion("ggplot2")
-packageVersion("grid")
-packageVersion("gridExtra")
-packageVersion("png")
-packageVersion("RColorBrewer")
-packageVersion("scales")
-```
