Add Network panel's detailed doc

--- a/panels/paneldoc/richness.Rmd
+++ b/panels/paneldoc/richness.Rmd
@@ -5,7 +5,8 @@ output:
     keep_md: yes
 ---
 
-This panel is based on phyloseq's [plot_richness function](http://joey711.github.io/phyloseq/plot_richness-examples.html).
+This panel is based on phyloseq's 
+[plot_richness function](http://joey711.github.io/phyloseq/plot_richness-examples.html).
 
 Although the function name includes the word *richness*, 
 which usually refers to the total number of species/OTUs
