data-UI and panel-doc revisions

--- a/panels/paneldoc/filter.Rmd
+++ b/panels/paneldoc/filter.Rmd
@@ -12,16 +12,39 @@ For more advanced filtering consider manipulating your data
 via R/phyloseq directly, prior to uploading it to the Shiny-phyloseq app.
 See the data tab for further info about importing/saving/uploading data. 
 
+**No filter calculations are performed until the** `Execute Filter` **button is clicked**
+
+Most downstream analyses will use the data 
+that results from the most-recent click of this panel's button.
+
+### Subset section
+
+This section of the sidebar panel 
+is for subsetting the microbiome data
+through dynamic pairs of variable selection widgets.
+The first/left widget allows you to select a variable in the dataset
+(a sample variable or taxonomic rank),
+and the second widget allows you to select 
+one or more classes of the just-selected variable.
+Upon execution, only the samples (or OTUs) 
+with the selected classes (or taxa) 
+will remain in the dataset.
+
+- **subset taxa**
+- **subset samples**
+
 Filtering and subsetting functions are evaluated
 in the order in which they appear in the sidebar panel.
 
-- First the data is subsetted 
+### Order of filtering operations
+
+- (1) First the data is subsetted 
 by specific taxonomic ranks or sample covariates,
 if any such subsetting arguments are provided.
-- Second, minimum thresholds for 
+- (2) Second, minimum thresholds for 
 library size or cross-dataset OTU-counts
 are evaluated and the data filtered accordingly.
-- Third, an interface for [genefilter's kOverA filtering](http://www.bioconductor.org/packages/release/bioc/manuals/genefilter/man/genefilter.pdf)
+- (3) Third, an interface for [genefilter's kOverA filtering](http://www.bioconductor.org/packages/release/bioc/manuals/genefilter/man/genefilter.pdf)
 is evaluated on the result of any other filtering up to this. It has the form
 ```{r eval=FALSE}
 flist = filterfun(kOverA(k, A))
@@ -32,3 +55,4 @@ where `filterfun` and `kOverA` are from [the genefilter package](http://www.bioc
 After clicking the button to execute the filtering parameters,
 a set of histograms of OTU and library count totals are displayed
 for comparing raw (original) and filtered results.
+
