--- a/panels/paneldoc/ordination.Rmd
+++ b/panels/paneldoc/ordination.Rmd
@@ -54,10 +54,14 @@ You should delete/unselect NULL when selecting facets.
 - **Facet Col** - This is the same as `Facet Row` above,
 but this widget controls the variables that will arrange the data
 into panel columns.
+- **Label** - A variable to map to point label.
+The text at each point will reflect the value of the chosen variable.
+The small numeric widgets to the right adjust
+label size (`Lab Sz`) and vertical justification (`V-Just`).
 
 ### Details
 
-`Palette`, `Theme`, `Size`, and `Opacity` - refer to the way points are drawn.
+`Palette`, `Size`, and `Opacity` - refer to the way points are drawn.
 
 - **Palette** - Refers to color palette.
 Only applicable if you have selected a `Color` variable
