--- a/panels/paneldoc/richness.Rmd
+++ b/panels/paneldoc/richness.Rmd
@@ -29,10 +29,14 @@ The "Y" axis is always mapped to the respective alpha-diversity value.
 Take care that selected discrete variables
 do not surpass the number of available aesthetic categories
 (e.g. more categories in data than you have color shades).
+- **Shape** - The variable selected here is mapped to point shape.
+Use the same care as for `Color`, but note that there are only 6 different shapes.
+- **Alpha Measures** - Select one or more alpha-diversity measures.
+They will be plotted as separate panels side-by-side. 
 
 ### Details
 
-`Palette`, `Theme`, `Size`, and `Opacity` - refer to the way points are drawn.
+`Palette`, `Size`, and `Opacity` - refer to the way points are drawn.
 
 - **Palette** - Refers to color palette.
 Only applicable if you have selected a `Color` variable
@@ -43,7 +47,16 @@ or more details about color palettes at [ColorBrewer](http://colorbrewer2.org/).
 [ggplot2 themes](http://docs.ggplot2.org/0.9.2.1/theme.html),
 which generally encompass stylistic graphical features,
 such as axis line types, axis label fonts and spacing, background color, etc.
-- **Angle** - This refers to the label angle for the horizontal ("X") axis.
+- **Size** - This refers to point size.
+- **Opacity** - The transparency of points in the graphic,
+on a `[0, 1]` scale;
+with zero meaning so transparent points are invisible,
+and one meaning points are perfectly opaque (the default).
+- **Max. Labels** - Maximum number of X-axis labels. Discrete-variable only.
+If number of X-axis discrete categories exceeds this value,
+then no axis labels are shown.
+- **Angle** - This refers to the label angle for the horizontal X-axis.
+- **Source Data** - What stage of data to include. Original unfiltered counts are recommended.
 
 ### Dimensions and Downloads
 
