--- a/panels/paneldoc/scatter.Rmd
+++ b/panels/paneldoc/scatter.Rmd
@@ -46,8 +46,10 @@ into panel columns.
 The text at each point will reflect the value of the chosen variable.
 The small numeric widgets to the right adjust
 label size (`Lab Sz`) and vertical justification (`V-Just`).
-- **Data** - Whether to use filtered `Counts` or a transformation.
-`Proportion` is a simple, provided transformation.
+- **Transform** - This option is very important.
+It determines whether to use filtered-counts, 
+or some transformation of the filtered count values.
+See the `Transform` panel for the definition of each available option.
 
 
 ### Details
