--- a/panels/paneldoc/filter.Rmd
+++ b/panels/paneldoc/filter.Rmd
@@ -27,14 +27,14 @@ In summary
 by specific taxonomic ranks or sample covariates,
 if any such subsetting arguments are provided.
 - (2) Second, minimum thresholds for 
-library size or cross-dataset OTU-counts
+library size or cross-dataset taxa-counts
 are evaluated and the data filtered accordingly.
 - (3) Third, an interface for
 [genefilter's kOverA filtering](http://www.bioconductor.org/packages/release/bioc/manuals/genefilter/man/genefilter.pdf)
 is evaluated on the result of any other filtering up to this. 
 
 After clicking the button to execute the filtering parameters,
-a set of histograms of OTU and library count totals are displayed
+a set of histograms of taxa and library count totals are displayed
 for comparing raw (original) and filtered results.
 
 In addition, the `Available Components` widget
@@ -52,7 +52,7 @@ The first/left widget allows you to select a variable in the dataset
 (a sample variable or taxonomic rank),
 and the second widget allows you to select 
 one or more classes of the just-selected variable.
-Upon execution, only the samples (or OTUs) 
+Upon execution, only the samples (or taxa) 
 with the selected classes (or taxa) 
 will remain in the dataset.
 
@@ -68,20 +68,20 @@ Currently only categorical variables are supported for sample subsetting.
 ### Total Sums Filtering
 
 After any subsetting, total sums filtering is applied.
-The `Sample Max` and `OTU Max` widgets specify minimum thresholds.
-Only samples or OTUs that have count totals above the displayed values
+The `Sample Min.` and `Taxa Min.` widgets specify minimum thresholds.
+Only samples or taxa that have count totals above the displayed values
 will be retained in the filtered data after clicking the `Execute Filter` button.
 
-### kOverA OTU Filtering
+### kOverA Taxa Filtering
 
 This is a useful and commonly-used heuristic.
 It is applied last, after other filtering steps
 have been applied to the data.
 
 - `A` -- The count value minmum threshold
-- `k` -- The number of samples in which an OTU exceeded `A`
+- `k` -- The number of samples in which a taxa exceeded `A`
 
-An OTU is retained in the dataset iff it exceeds the value `A` in at least `k` samples.
+An taxa is retained in the dataset iff it exceeds the value `A` in at least `k` samples.
 
 In phyloseq code, this filtering step has the form
 ```{r eval=FALSE}
