--- a/panels/paneldoc/ordination.Rmd
+++ b/panels/paneldoc/ordination.Rmd
@@ -11,7 +11,7 @@ This panel provides an interface to
 
 ## Widget Sections
 
-### Structure
+### Define Ordination
 
 This top section defines key aspects of 
 the ordination calculation.
